core/src/main/resources/css/admin.css
/**
 * Copyright 2011 Prometil SARL
 *
 * This file is part of Kernely.
 *
 * Kernely is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of
 * the License, or (at your option) any later version.
 *
 * Kernely is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public
 * License along with Kernely.
 * If not, see <http://www.gnu.org/licenses/>.
 */
a.loader{
  color:#008888;
  cursor:pointer;
}


/* Common */
div.menu_admin, div.menu_admin_selected{
	border-bottom:1px solid #a0a2a3;
	width:223px;
	height:43px;
	padding-left:15px;
}

div.menu_admin_selected{
	background-color:#3e3d40;
}

#mask{
	position:absolute;
	z-index:9000;
	background-color:#000;
	display:none;top:0;
	left:0;
}

.closeModal{
	right:0;
}

/* User page*/
#modal_window_user{
	position:absolute;
	width:440px;
	height:440px;
	display:none;	
	z-index:9999;
	padding:20px;
	top:0;
	left:0;
}

#rolesToLink{
	height:150px;
	overflow-y:auto;
}

/* Group page*/
#modal_window_group{
	position:absolute;
	width:440px;
	height:300px;
	display:none;
	z-index:9999;
	padding:20px;
	top:0;
	left:0;
}

#groups_errors_create , #groups_errors_update{
	display:none;
	font-weight:bold;
	color:red;
}

#usersToLink{
	height:150px;
	overflow-y:auto;
}

/* Manager page */
#modal_window_manager{
	position:absolute;
	width:440px;
	height:300px;
	display:none;
	z-index:9999;
	padding:20px;
	top:0;
	left:0;
}

#usersToLink{
	height:150px;
	overflow-y:auto;
}

